Text wrapping was fixed in big-icon-template.

--- a/styles/templates/_bigIcon.scss
+++ b/styles/templates/_bigIcon.scss
@@ -57,6 +57,7 @@
   position: inherit !important;
   font-size: x-large;
   margin: 5px 6px 5px 15px;
+  display: flex;
 }
 
 .ontodia-big-icon-template_property {
